@@ -198,6 +198,7 @@ PHP_METHOD(Geometry, centroid);
 PHP_METHOD(Geometry, relate); 
 PHP_METHOD(Geometry, relateBoundaryNodeRule); 
 PHP_METHOD(Geometry, simplify); /* also does topology-preserving */
+PHP_METHOD(Geometry, normalize);
 PHP_METHOD(Geometry, extractUniquePoints); 
 PHP_METHOD(Geometry, disjoint);
 PHP_METHOD(Geometry, touches);
@@ -262,6 +263,7 @@ static zend_function_entry Geometry_methods[] = {
     PHP_ME(Geometry, relate, NULL, 0)
     PHP_ME(Geometry, relateBoundaryNodeRule, NULL, 0)
     PHP_ME(Geometry, simplify, NULL, 0)
+    PHP_ME(Geometry, normalize, NULL, 0)
     PHP_ME(Geometry, extractUniquePoints, NULL, 0)
     PHP_ME(Geometry, disjoint, NULL, 0)
     PHP_ME(Geometry, touches, NULL, 0)
@@ -1001,6 +1003,27 @@ PHP_METHOD(Geometry, simplify)
     }
 
     if ( ! ret ) RETURN_NULL(); /* should get an exception first */
+
+    /* return_value is a zval */
+    object_init_ex(return_value, Geometry_ce_ptr);
+    setRelay(return_value, ret);
+}
+
+/**
+ * GEOSGeometry GEOSGeometry::normalize()
+ */
+PHP_METHOD(Geometry, normalize)
+{
+    GEOSGeometry *this;
+    GEOSGeometry *ret;
+
+    this = (GEOSGeometry*)getRelay(getThis(), Geometry_ce_ptr);
+
+    ret = GEOSGeom_clone(this);
+
+    if ( ! ret ) RETURN_NULL();
+
+    GEOSNormalize(ret); /* exception should be gotten automatically */
 
     /* return_value is a zval */
     object_init_ex(return_value, Geometry_ce_ptr);
